// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nested resources belongsTo, hasMany.[hasMany, belongsTo, hasMany], mixed order 1`] = `
Array [
  Object {
    "id": 11,
    "specCategory": Object {
      "id": 7,
      "specCategoryData": "Should show up",
    },
    "specData": "Should show up",
    "specDetails": Array [
      Object {
        "coms": Array [
          Object {
            "comData": "Should show up",
            "id": 2,
          },
        ],
        "id": 12,
        "roomTypes": Array [
          Object {
            "id": 2,
            "roomTypeData": "Should show up",
          },
          Object {
            "id": 4,
            "roomTypeData": "Should show up",
          },
        ],
        "specDetailData": "Should show up 1",
        "user": Object {
          "id": 5,
          "usersData": "Should show up",
        },
      },
      Object {
        "id": 13,
        "roomTypes": Array [
          Object {
            "id": 2,
            "roomTypeData": "Should show up",
          },
          Object {
            "id": 4,
            "roomTypeData": "Should show up",
          },
        ],
        "specDetailData": "Should show up 2, no coms",
      },
    ],
  },
]
`;

exports[`Nested resources belongsTo, hasMany.[hasMany, hasMany, belongsTo] 1`] = `
Array [
  Object {
    "id": 11,
    "specCategory": Object {
      "id": 7,
      "specCategoryData": "Should show up",
    },
    "specData": "Should show up",
    "specDetails": Array [
      Object {
        "coms": Array [
          Object {
            "comData": "Should show up",
            "id": 2,
          },
        ],
        "id": 12,
        "roomTypes": Array [
          Object {
            "id": 2,
            "roomTypeData": "Should show up",
          },
          Object {
            "id": 4,
            "roomTypeData": "Should show up",
          },
        ],
        "specDetailData": "Should show up 1",
        "user": Object {
          "id": 5,
          "usersData": "Should show up",
        },
      },
      Object {
        "id": 13,
        "roomTypes": Array [
          Object {
            "id": 2,
            "roomTypeData": "Should show up",
          },
          Object {
            "id": 4,
            "roomTypeData": "Should show up",
          },
        ],
        "specDetailData": "Should show up 2, no coms",
      },
    ],
  },
]
`;

exports[`Nested resources belongsTo.[belongsTo, belongsTo] 1`] = `
Array [
  Object {
    "comData": "Should show up",
    "id": 99,
    "spec": Object {
      "area": Object {
        "areasData": "Should show up",
        "id": 51,
      },
      "id": 11,
      "specCategory": Object {
        "id": 7,
        "specCategoryData": "Should show up",
      },
      "specData": "Should show up",
    },
  },
]
`;

exports[`Nested resources belongsTo.[belongsTo, hasMany, belongsTo], mixed 1`] = `
Array [
  Object {
    "comData": "Should show up",
    "id": 99,
    "spec": Object {
      "area": Object {
        "areasData": "Should show up",
        "id": 51,
      },
      "id": 11,
      "specCategory": Object {
        "id": 7,
        "specCategoryData": "Should show up",
      },
      "specData": "Should show up",
      "specDetails": Array [
        Object {
          "id": 1,
          "specDetailsData": "Should show up 1",
        },
        Object {
          "id": 2,
          "specDetailsData": "Should show up 2",
        },
      ],
    },
  },
]
`;

exports[`Nested resources belongsTo.[belongsTo, hasMany] 1`] = `
Array [
  Object {
    "comData": "Should show up",
    "id": 99,
    "spec": Object {
      "area": Object {
        "areasData": "Should show up",
        "id": 51,
      },
      "id": 11,
      "specData": "Should show up",
      "specDetails": Array [
        Object {
          "id": 1,
          "specDetailsData": "Should show up 1",
        },
        Object {
          "id": 2,
          "specDetailsData": "Should show up 2",
        },
      ],
    },
  },
]
`;

exports[`Nested resources belongsTo.[hasMany, belongsTo], switched order 1`] = `
Array [
  Object {
    "comData": "Should show up",
    "id": 99,
    "spec": Object {
      "area": Object {
        "areasData": "Should show up",
        "id": 51,
      },
      "id": 11,
      "specData": "Should show up",
      "specDetails": Array [
        Object {
          "id": 1,
          "specDetailsData": "Should show up 1",
        },
        Object {
          "id": 2,
          "specDetailsData": "Should show up 2",
        },
      ],
    },
  },
]
`;

exports[`Nested resources belongsTo.belongsTo, belongsTo.belongsTo 1`] = `
Array [
  Object {
    "comData": "Should show up",
    "id": 99,
    "spec": Object {
      "area": Object {
        "areasData": "Should show up",
        "id": 51,
      },
      "id": 11,
      "specCategory": Object {
        "id": 7,
        "specCategoryData": "Should show up",
      },
      "specData": "Should show up",
    },
  },
]
`;

exports[`Nested resources belongsTo.belongsTo, belongsTo.hasMany, belongsTo.belongsTo 1`] = `
Array [
  Object {
    "comData": "Should show up",
    "id": 99,
    "spec": Object {
      "area": Object {
        "areasData": "Should show up",
        "id": 51,
      },
      "id": 11,
      "specCategory": Object {
        "id": 7,
        "specCategoryData": "Should show up",
      },
      "specData": "Should show up",
      "specDetails": Array [
        Object {
          "id": 1,
          "specDetailsData": "Should show up 1",
        },
        Object {
          "id": 2,
          "specDetailsData": "Should show up 2",
        },
      ],
    },
  },
]
`;

exports[`Nested resources hasMany.[belongsTo, hasMany, hasMany], belongsTo, switched order 1`] = `
Array [
  Object {
    "id": 11,
    "specCategory": Object {
      "id": 7,
      "specCategoryData": "Should show up",
    },
    "specData": "Should show up",
    "specDetails": Array [
      Object {
        "coms": Array [
          Object {
            "comData": "Should show up",
            "id": 2,
          },
        ],
        "id": 12,
        "roomTypes": Array [
          Object {
            "id": 2,
            "roomTypeData": "Should show up",
          },
          Object {
            "id": 4,
            "roomTypeData": "Should show up",
          },
        ],
        "specDetailData": "Should show up 1",
        "user": Object {
          "id": 5,
          "usersData": "Should show up",
        },
      },
      Object {
        "id": 13,
        "roomTypes": Array [
          Object {
            "id": 2,
            "roomTypeData": "Should show up",
          },
          Object {
            "id": 4,
            "roomTypeData": "Should show up",
          },
        ],
        "specDetailData": "Should show up 2, no coms",
      },
    ],
  },
]
`;

exports[`Nested resources hasMany.hasMany.hasMany 1`] = `
Array [
  Object {
    "id": 11,
    "specData": "Should show up",
    "specDetails": Array [
      Object {
        "coms": Array [
          Object {
            "comData": "Should show up",
            "id": 2,
            "tasks": Array [
              Object {
                "id": 3,
                "tasksData": "Should show up",
              },
            ],
          },
        ],
        "id": 12,
        "specDetailData": "Should show up 1",
      },
      Object {
        "id": 13,
        "specDetailData": "Should show up 2, no coms",
      },
    ],
  },
]
`;

exports[`Nested resources includes with belongsTo.belongsTo 1`] = `
Array [
  Object {
    "id": 13,
    "pocData": "f",
    "vendorContact": Object {
      "contact": Object {
        "contactData": "a",
        "id": 12,
      },
      "id": 15,
      "vcData": "b",
    },
  },
]
`;

exports[`Nested resources includes with hasMany.belongsTo 1`] = `
Array [
  Object {
    "id": 3,
    "name": "QA Checklist Rest",
    "tasks": Array [
      Object {
        "description": "QA Checklist Rest 5",
        "id": 5,
      },
      Object {
        "description": "QA Checklist Rest 6",
        "id": 6,
      },
    ],
  },
  Object {
    "id": 1,
    "name": "Onboarding Rest",
    "tasks": Array [
      Object {
        "description": "Onboarding REST 1",
        "id": 1,
        "user": Object {
          "id": 8,
          "name": "Joe",
        },
      },
      Object {
        "description": "Onboarding REST 2",
        "id": 2,
      },
    ],
  },
  Object {
    "id": 2,
    "name": "Project Audit Rest",
    "tasks": Array [
      Object {
        "description": "Project Audit Rest 3",
        "id": 3,
      },
      Object {
        "description": "Project Audit Rest 4",
        "id": 4,
      },
    ],
  },
]
`;

exports[`Nested resources includes with hasMany.hasMany 1`] = `
Array [
  Object {
    "id": 11,
    "specData": "Should show up",
    "specDetails": Array [
      Object {
        "coms": Array [
          Object {
            "comData": "Should show up",
            "id": 2,
          },
        ],
        "id": 12,
        "specDetailData": "Should show up 1",
      },
      Object {
        "id": 13,
        "specDetailData": "Should show up 2, no coms",
      },
    ],
  },
]
`;
